[package]
name = "steve"
version = "0.1.3"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
icu_normalizer = "2.1.1"
rayon = "1.10"
reqwest = { version = "0.12", default-features = false, features = ["blocking","rustls-tls"] }
rss = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"
thiserror = "2.0.18"
owo-colors = "4.3.0"
homedir = "0.3.6"
